# ft_printf

./: CMakeLists.txt  Makefile  args_handler.c  ft_args_handler.c  ft_printf.c  main.c  printf.c
Sources/: get_adress.c  get_base16.c  get_char.c  get_integer.c  get_string.c
headers/: ft_printf.h  printf.h
libft/: Makefile  ft_base.c  ft_calloc.c  ft_putnbr_fd.c  ft_putstr_fd.c  libft.h
minilib/: ft_base.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_tolower.c
printers/: ft_get_address.c  ft_get_base16.c  ft_get_char.c  ft_get_integer.c  ft_get_string.c  get_address.c  get_base16.c  get_char.c  get_integer.c  get_string.c
